resources/assets/sass/app.scss
// Variables

  @import 'variables';

html,
body{
  min-height: 100%;
  height: 100%;
}

body{
  display: flex;
  flex-direction: column;
}

.well-30 {
  padding: 30px;
  background: #fff;
  width: 100%;
  display: inline-block; 
}

.well-20 {
  padding: 20px;
  background: #fff;
  display: inline-block;
  width: 100%; }

.relative {
  position: relative; }

.profile-steps {
  background: #fcfbfb;
  list-style: none;
  padding: 0;
  margin: 0;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-pack: justify;
  justify-content: space-between; }

.profile-steps a {
  padding: 10px 14px;
  display: block;
  font-weight: bold;
  color: #abaaaa;
  background: #fcfbfb; }

.profile-steps a:hover,
.profile-steps a:active,
.profile-steps a:focus {
  text-decoration: none; }

.profile-steps a.active {
  color: $red-two;
  background: #fff;
  font-family: 'GothamBlackRegular'; }

select option:checked {
  background-color: #d16565 !important; }

/* Alt Modal */
.modal-body .bootstrap-select .dropdown-toggle,
.modal-body .bootstrap-select .popover-title {
  display: none; }

.modal-body .bootstrap-select .dropdown-menu {
  position: static;
  top: auto;
  left: auto;
  float: none;
  border: 0;
  box-shadow: none; }

.modal-body .bootstrap-select {
  height: auto;
  border: 0;
  box-shadow: none; }

.alt-modal .modal-dialog {
  border-radius: 0;
  margin-top: 100px; }

.alt-modal .modal-content {
  -webkit-box-shadow: none;
  border-radius: 0;
  box-shadow: none; }

.alt-modal .modal-header {
  position: relative; }

.alt-modal .close {
  position: absolute;
  top: -40px;
  right: -10px;
  border: 0;
  opacity: 1; }

.alt-modal .close-alt-modal .brand-sprite {
  width: 40px;
  height: 40px;
  display: block;
  background-position: -284px 9px; }

.alt-modal .modal-title {
  color: #d16565; }

.modal-title {
  text-align: center; }

.select-scrollable {
  max-height: 300px;
  overflow-y: scroll; }

.label-primary.round {
  border-radius: 100%;
  padding: 3px 3px;
  display: inline-block;
  background: $red-two;
  font-weight: normal;
  font-size: 10px !important; }

.well-20 table, .well-30 table {
  margin-bottom: 0;
  font-size: 12px;
  font-weight: 700; }

.well-30 hr {
  margin-top: 15px;
  margin-bottom: 15px; }

.well-30-yellow {
  background: #f7f9f3 !important;
  padding: 30px; }

.well-dark {
  background: #3c3c3c;
  color: #fff; }

.well-dark a {
  color: #fff;
  text-decoration: underline; }

.well-btn {
  position: absolute;
  right: 15px;
  padding-left: 10px;
  border-radius: 10px 0 0 10px; }

.well-dark .input-group .form-control {
  border-radius: 0; }

.btn-square {
  background: #1a4072;
  border-radius: 0 !important;
  color: #fff;
  border: 0; }

.btn-full-width {
  width: 100%; }

.td-btn {
  position: relative;
  height: 40px; }

.td-btn .loading {
  border-top-color: rgba(255, 255, 255, 0.7); }

.files {
  text-align: center;
  margin-bottom: 10px; }

.files .brand-files {
  margin: 0 auto; }

.btn-rounded {
  border-radius: 10px;
  border: 0; }

.btn-success, .btn-success:hover, .btn-success:active {
  background: #99b022; }
.main-view {
  margin-left: 280px;
  min-height: 100%;
  .btn.btn-block{
    padding: 10px;
    border-radius: 0;
  } 
}
.main-view .btn-warning {
  background: #e0be03; }

.main-view .btn-danger {
  background: #c12b2b; }

.main-view .btn-primary {
  background: $red-two;
  border-color: $red-two; 
}

.main-view .btn-dark {
  background: #3c3c3c;
  color: #fff; }

.main-view .btn-light {
  background: #fff;
  color: #3c3c3c; }

.main-view .btn-pad-20 {
  padding-left: 20px;
  padding-right: 20px; }

.main-view a.add-company {
  padding: 15px 20px 20px;
}

.main-view.open {
  /* handled in js*/ }

.main-view h4 {
  font-size: 24px;
  font-family: 'GothamLightRegular';
  color: $red-two;
  border-bottom: 1px solid $grey;
  padding-bottom: 10px; 
}

#search-name {
  font-size: 19px; }

.display-inline {
  display: inline; }

table td.cursor-text{
  a{
    cursor: default;
    &.btn-success:active{background: #99b022;}
  }
}

.table-striped > tbody > tr > td {
  border-top: 1px solid #f3f3f3; }

.table-striped > tbody > tr:first-child td {
  border-top: 0; }

.table-striped > tbody > tr:nth-of-type(odd) {
  background-color: #fff; }

.table-striped > tbody > tr:nth-of-type(even) {
  background-color: #fbfbfb; }

.table > thead > tr > th {
  vertical-align: bottom;
  border-bottom: 2px solid #ddd;
  border: 0;
  color: $red-two;
  font-weight: bold;
  text-transform: uppercase;
  font-family: 'GothamBoldRegular';
  font-size: 11px; }

.navigation {
  display: block;
  background: #fff;
  max-height: 40px; }

.navigation .close-sidebar {
  width: 40px;
  height: 40px;
  background: $red-two;
  float: left;
  position: relative;
  z-index: 2;
  margin-left: 10px;
  margin-top: 5px;
  border-radius: 50%; 
}

.navigation .close-sidebar i.brand-sprite {
  width: 40px;
  height: 40px;
  display: block;
  background-position: -284px 9px; }

.main-view.open .close-sidebar i.brand-sprite {
  background-position: -314px 8px; }

.navigation .navbar {
  display: inline-block;
  margin-bottom: 0;
  margin-top: 0;
  border: 0;
  max-height: 40px; }

.navigation .navbar-nav {
  margin: 0; }

.navigation .navbar li {
  max-height: 40px; }

.navigation .navbar li a {
  line-height: 14px;
  font-size: 12px; }

.navigation .navbar .username-item {
  padding: 10px 15px;
  font-size: 13px;
  color: #444; }

.navigation .navbar .username-item .badge-black {
  padding: 4px;
  background: #444;
  width: 19px;
  height: 19px;
  font-size: 11px;
  position: relative;
  bottom: 1px;
  margin-left: 3px; }

.navigation .navbar li a .caret {
  margin-top: -3px; }

.navigation .navbar li a i {
  width: 10px;
  height: 13px;
  display: inline-block;
  background-position: -1px 57px; }

.navigation .social {
  float: right; }

.navigation .social .brand-sprite.brand-social {
  width: 40px;
  height: 40px;
  margin: 0;
  padding: 0;
  margin-left: -4px; }
/* ... */

